feat(auth): implement authentication guard and verification flow for chatbot